feat: Rename project from Life Hub to Logo Hub
This commit rebrands the application from "Life Hub Design Studio" to "Logo Hub Design Studio". It updates the project name, metadata, prompt generation, and local storage keys to reflect the new branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "life-hub-design-studio",
+  "name": "logo-hub-design-studio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
